# nictophobia

./: .gitignore  CMakeLists.txt  Makefile  Nictophobia.cpp  README.md  nictophobia.supp
miocpp/: DirDevice.cpp  DirDevice.h  FileReader.cpp  FileReader.h  IODevice.cpp  IODevice.h  PhysicalFileReader.cpp  PhysicalFileReader.h  iopath.cpp  iopath.h  mio.cpp  mio.h
necore/: Batch2D.cpp  Batch2D.h  Camera.cpp  Camera.h  Font.cpp  Font.h  FreeTypeFont.cpp  FreeTypeFont.h  Image.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  NeAssets.cpp  NeAssets.h  NeContext.cpp  NeContext.h  Necore.cpp  Necore.h  RasterImage.cpp  RasterImage.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  colors.h  common.h  uvregion.h  version.h
necore/assets/: Assets.cpp  Assets.h  AssetsLoader.cpp  AssetsLoader.h  assets_loading.cpp  assets_loading.h
necore/debug/: FreeCamera.cpp  FreeCamera.h
necore/formats/: obj_format.cpp  obj_format.h  png_format.cpp  png_format.h
necore/g2d/: LMPacker.cpp  LMPacker.h  Sprite.cpp  Sprite.h
necore/g3d/: Batch3D.cpp  Batch3D.h
necore/gl/: GLMesh.cpp  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLWindow.cpp  GLWindow.h
necore/input/: InputBinding.cpp  InputBinding.h  InputProcessor.cpp  InputProcessor.h  input_constants.h
necore/stage/: Object.h  Stage.cpp  Stage.h
res/: g3d.glslf  g3d.glslv  ui.glslf  ui.glslv
